kube/2-db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asteroids-db-dep
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asteroids-db
  template:
    metadata:
      labels:
        app: asteroids-db
    spec:
      containers:
        - name: asteroids-db
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: asteroids-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: asteroids-db-storage
          persistentVolumeClaim:
            claimName: asteroids-db-pvc
