kube/2-web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dep
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: pbm-sidecar
          image: petabridge/pbm:latest
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "pbm cluster leave"]
        - name: web
          image: yourImageName:${IMAGE_TAG}
          ports:
            - containerPort: 8080
            - containerPort: 8110
