kube/3-grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.5.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/datasources/datasource.yml
              subPath: grafana-datasource.yml
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/dashboards/main.yaml
              subPath: dashboard-config.yml
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: grafana-dashboard-config
              mountPath: /var/lib/grafana/dashboards/asteroids.json
              subPath: asteroids-kube.json
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-dashboard-config
          configMap:
            name: grafana-dashboard-config
