kube/3-prometheus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9100
          args:
            - "--enable-feature=promql-experimental-functions"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--web.enable-remote-write-receiver"
            - "--enable-feature=exemplar-storage"
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: datasources.yml
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
