kube/3-tempo-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          ports:
            - containerPort: 9095
          image: grafana/tempo:latest
          args: ["-config.file=/etc/tempo.yaml"]
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo.yaml
              subPath: tempo.yaml
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
