kube/3-zipkin-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-dep
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: ghcr.io/openzipkin/zipkin-slim:latest
          ports:
            - containerPort: 9411
