kube/2-lighthouse.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: lighthouse-svc
  labels:
    app: lighthouse
spec:
  clusterIP: None
  ports:
    - port: 5110
  selector:
    app: lighthouse
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ${NAMESPACE}
  name: lighthouse
  labels:
    app: lighthouse
spec:
  serviceName: lighthouse-svc
  replicas: 3
  selector:
    matchLabels:
      app: lighthouse
  template:
    metadata:
      labels:
        app: lighthouse
    spec:
      terminationGracePeriodSeconds: 35
      containers:
        - name: lighthouse
          image: petabridge/lighthouse:latest
          ports:
            - containerPort: 9110 # Management / HTTP port
            - containerPort: 8110 # Akka cluster port
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "pbm 127.0.0.1:9110 cluster leave"]
