kube/3-collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: collector-svc
  namespace: ${NAMESPACE}
spec:
  selector:
    app: collector
  ports:
    - port: 4317
      targetPort: 4317
  type: ClusterIP
