kube/3-grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: ${NAMESPACE}
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
