kube/3-loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: loki-svc
  namespace: ${NAMESPACE}
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
  type: ClusterIP
