kube/3-tempo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tempo-svc
  namespace: ${NAMESPACE}
spec:
  selector:
    app: tempo
  ports:
    - port: 9095
      targetPort: 9095
  type: ClusterIP
