kube/3-zipkin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
  namespace: ${NAMESPACE}
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
  type: ClusterIP
